
* Verilator 3.60**

***  Added --inhibit-sim flag for environments using old __Vm_inhibitSim.

***  Added `systemc_dtor for destructor extentions.  [Allan Cochrane]

***  Added -MP to make phony dependencies, ala GCC's.

***  Changed how internal functions are invoked to reduce aliasing.
     Useful when using GCC's -O2 or -fstrict-aliasing, to gain another ~4%.

**** Fix coredump when unused modules have unused cells.  [David Hewson]

**** Fix memory leak when destroying modules.  [John Stroebel]

**** Fix $display %m name not matching Verilog name inside SystemC modules.

**** Declare optimized lookup tables as 'static', to reduce D-Cache miss rate.

* Verilator 3.600 08/28/2006 Beta

**   Support dotted cross-hierarchy variable and task references.

**** Lint for x's in generate case statements.

**** Fix line numbers being off by one when first file starts with newline.

**** Fix naming of generate for blocks to prevent non-inline name conflict.

**** Fix redundant statements remaining after table optimization.

* Verilator 3.542 08/11/2006 Stable

**** Fix extraneous UNSIGNED warning when comparing genvars.  [David Hewson]

**** Fix extra whitespace in $display %c.  [by David Addison]

**** vl_finish and vl_fatal now print via VL_PRINTF rather then cerr/cout.

**** Add VL_CONST_W_24X macro.  [Bernard Deadman]

* Verilator 3.541 07/05/2006 Beta

***  Fix "// verilator lint_on" not re-enabling warnings.  [David Hewson]

***  Fix 3.540's multiple memory assignments to same block.  [David Hewson]

**** Add warning on changeDetect to arrayed structures.  [David Hewson]

**** Fix non-zero start number for arrayed instantiations.  [Jae Hossell]

**** Fix GCC 4.0 header file warnings.

* Verilator 3.540 06/27/2006 Beta

**** Optimize combo assignments that are used only once, ~5-25% faster.

**** Optimize delayed assignments to memories inside loops, ~0-5% faster.

**** Fix mis-width warning on bit selects of memories.  [David Hewson]
